--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -23,10 +23,16 @@ jobs:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Copy files to GCloud Bucket
-        run: gsutil cp ./*.xsd  gs://schema.cip4.org/ptk_schema_2_dev/
+        run: gsutil cp ./*.xsd  gs://schema.cip4.org/ptk_schema_2_x/
 
       - name: Create ZIP Archive
-        run: zip ptk_schema_2_dev.zip *.xsd
+        run: zip ptk_schema_2_x.zip *.xsd
 
       - name: Copy ZIP Archive to GCloud Bucket
         run: gsutil cp ./*.zip  gs://schema.cip4.org/
+
+      - name: Createa tar.gz Archive
+        run: tar -czvf ptk_schema_2_x.tar.gz *.xsd
+
+      - name: Copy tar.gz Archive to GCloud Bucket
+        run: gsutil cp ./*.tar.gz  gs://schema.cip4.org/
