--- a/.github/workflows/publish-release-1_x.yml
+++ b/.github/workflows/publish-release-1_x.yml
@@ -13,7 +13,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out sources...
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Setup JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 11
+          cache: 'gradle'
+
+      - name: Verify
+        run: ./gradlew test --no-daemon
 
       - name: Update Parameters
         run: |
@@ -27,12 +37,15 @@ jobs:
           sed -i "s|@@buildTime@@|${NOW}|g" *.xsd
           echo "{ \"buildTime\": \"${NOW}\", \"version\": \"${VERSION}\", \"specVersion\": \"${SPEC_VERSION}\" }" > version.json
 
-      - name: Setup GCloud CLI
-        uses: google-github-actions/setup-gcloud@master
+      - name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          export_default_credentials: true
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
+      - name: Setup GCloud CLI
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ${{ inputs.GCP_PROJECT_ID }}
 
       - name: Copy files to GCloud Bucket
         run: |
@@ -54,11 +67,11 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: xsd-artifacts
+          name: xsd-artifact
           path: '*.xsd'
 
       - name: Invalidate CDN Cache
-        run: | 
+        run: |
           gcloud compute url-maps invalidate-cdn-cache cip4-public-balancer --path "/ptk_schema_1_${GITHUB_REF##*PrintTalk_1.}.zip" 
           gcloud compute url-maps invalidate-cdn-cache cip4-public-balancer --path "/ptk_schema_1_${GITHUB_REF##*PrintTalk_1.}.tar.gz"
           gcloud compute url-maps invalidate-cdn-cache cip4-public-balancer --path "/ptk_schema_1_${GITHUB_REF##*PrintTalk_1.}/*"
